<resources>
    <string name="app_name">mytv_demo</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_channel">Truyền hình</string>
    <string name="nav_movie">Phim truyện</string>
    <string name="nav_more">Khác</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="hello">Xin chào</string>
    <string name="dummy_phone_number">0911433444</string>
    <string name="id_account">ID tài khoản</string>
    <string name="email">Email</string>
    <string name="not_updated">Chưa cập nhật</string>
    <string name="name">Tên</string>
    <string name="dummy_id">34650692</string>
</resources>